# accentcoach

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/accentcoach/: __init__.py  cli.py  models.py  report.py
src/accentcoach/analyzer/: __init__.py  comparison.py  difficulty.py  phoneme.py
src/accentcoach/exercises/: __init__.py  drills.py  words.py
tests/: test_accentcoach.py  test_benchmark.py  test_core.py  test_integration.py
